<resources>
    <string name="app_name">App Monitor</string>
    <string name="analytics">Analytics</string>
    <string name="home_screen">Home Screen</string>
    <string name="dnd_screen">DND Setup</string>
    <string name="permission">Permission</string>
    <string name="app_icon">App icon</string>
    <string name="back_button">Back</string>
    <string name="monitor">Monitor</string>
    <string name="invalid_app">Invalid App selection</string>
    <string name="default_error_desc">Something went wrong</string>
    <string name="running_service"> Service is running</string>
    <string name="stopped_service"> Service is stopped. Please reselect apps</string>
    <string name="info">Select the apps for which you want to monitor the usage time</string>
    <string name="notification_title">App Monitor</string>
    <string name="notification_description">Monitoring your app usage</string>
    <string name="all_granted">All permissions granted</string>
    <string name="notification_permission_title">Notification Permission required</string>
    <string name="notification_permission_description">Please enable notification permissions to use app monitor</string>
    <string name="permission_required_title">Permission required</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_description">In order to personalise your experience and for analytical purpose to improve the app, we collect some personal information. \n\nYour privacy is important to us and privacy policy details how we use and protect your information. \n\nBy accepting this, you agree to the terms in our privacy policy.</string>
    <string name="privacy_policy_url_holder">Read ##privacy_policy##</string>
    <string name="privacy_policy_url">https://www.freeprivacypolicy.com/live/53699ba9–d108–4b57-a71b-21961c539fe1</string>
    <string name="usage_data_permission_details">To monitor your app usage, we need permission to access data usage. We never share this information to any third party organisations.</string>
    <string name="overlay_permission_details">We need overlay permission to show a prompt when you exceeds the daily app usage time.</string>
    <string name="threshold_time_title">Select the threshold time</string>
    <string name="threshold_time_description">If your ##app_name## usage time cross this threshold, we will advise you to stop using this app.</string>
    <string name="quick_puzzle_title">Solve below puzzle to unlock the app</string>
    <string name="solve_puzzle">Solve below puzzle</string>
    <string name="time_left">Time left</string>
    <string name="inspirational_image">Inspirational image</string>
    <string name="close_app">Close App</string>
    <string name="open_app">Open App</string>
    <string name="exceed_usage">Today\'s usage limit is exceeded</string>
    <string name="dnd_usage">You can not use this app within active DND time. Please come back after ##dndEndTime##</string>
    <string name="set_limit">Set limit: ##limit##</string>
    <string name="total_usage">Total usage: ##usage##</string>
    <string name="delay_minutes">Delay ##delayMin## min</string>
    <string name="change_dnd">Change DND hours</string>
    <string name="game_title">Win this simple game to unlock the app</string>
    <string name="num_count_game_info">Your aim is to achieve the number ##target## by selecting any number in a range of ##range_low## to ##range_high##.</string>
    <string name="chart_type"> Chart: ##chartType##</string>
    <string name="launch_count">Launch count</string>
    <string name="max_usage">Max usage</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_skip">Skip</string>
    <string name="button_allow">Allow</string>
    <string name="button_accept">I Accept</string>
    <string name="today_usage_trend">Today\'s usage trend</string>
    <string name="history_usage_trend">Historical usage trend</string>
    
<!--    Stats card-->
    <string name="today_usage_title">Today\'s usage</string>
    <string name="launch_ct_title">Launch count</string>
    <string name="longest_session_title">Longest session</string>
    <string name="threshold_title">Threshold time</string>
    <string name="session_id">Session ID</string>
    <string name="session_length">Session Length</string>
<!--    -->

<!--    Dashboard-->
    <string name="quote_title">Quote of the day</string>
    <string name="app_usage_breakdown">Major app usage breakdown</string>
    <string name="blog_header">Keep yourself motivated</string>
    <string name="read_more">read more</string>
    <string name="dnd_header">Do not disturb mode</string>
    <string name="dnd_description">You can set the DND mode for any application, so that you can avoid the app usage within that time</string>
    <string name="dnd_button">Set DND</string>
    <string name="usage_limit_header">Limit app usage</string>
    <string name="usage_limit_description">You can set the usage limit for any application, so that you can limit your daily app usage time</string>
    <string name="usage_limit_button">Set usage limit</string>
     
<!--    DND screen-->
    <string name="dnd_information">Select the DND period and the applications. We will give you a prompt whenever you try to access these applications within DND time</string>
    <string name="add_dnd_period">Add another DND</string>
    <string name="dnd_container_title">DND container</string>
    <string name="dnd_instruction">To remove from DND time, long press on the app icon, then drag and drop to Non-DND apps container</string>
    <string name="non_dnd_container_title">Apps list</string>
    <string name="non_dnd_instruction">Long press on the app icon then drag and drop it to the above container.</string>
    <string name="dnd_select">Select DND time</string>
    <string name="dnd_error">Start time and end time can not be same</string>
    <string name="save_dnd">Save DND configuration</string>

<!--    Push notifications-->
    <string name="ct_fcm_fallback_notification_channel_label">Miscellaneous</string>
</resources>