<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background">

    <include layout="@layout/overlay_base"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_exceed_usage_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/exceed_usage"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/text_set_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/set_limit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_total_usage"
        android:text="@string/total_usage"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <com.patrykandpatrick.vico.views.chart.ChartView
        android:id="@+id/chart_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chart="line"
        app:showStartAxis="true"
        app:showBottomAxis="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_marginBottom="24dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_delay"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:text="@string/delay_minutes"
            tools:ignore="NestedWeights"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_close"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:text="@string/close_app"/>
    </LinearLayout>

</LinearLayout>