<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:theme="@style/Theme.AppMonitor">

    <include layout="@layout/overlay_base"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_dnd_usage_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/dnd_usage"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <include layout="@layout/ad_banner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_marginBottom="24dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_change_dnd"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:text="@string/change_dnd"
            tools:ignore="NestedWeights"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_close"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:text="@string/close_app"/>
    </LinearLayout>

</LinearLayout>